fix: resolve CodeQL security alerts for ReDoS and workflow permissions
Security fixes:
- Fix polynomial regex (ReDoS) in sentence splitting by using a "tempered
  greedy token" pattern that avoids catastrophic backtracking while
  preserving all 35+ Golden Rule sentence segmentation tests
- Fix ReDoS in whitespace trimming by using separate replacements instead
  of alternation: `replace(/^ +/, '').replace(/ +$/, '')`
- Fix ReDoS in ellipsis detection by using `\.{2,}$` instead of `\.\.\.*$`
- Add explicit `permissions: contents: read` to CI and publish workflow
  jobs that were missing them

Testing:
- All 132 existing tests pass
- Added 4 new ReDoS regression tests that verify pathological inputs
  (10,000+ character strings) complete in under 100ms
- Verified on Node 18, 20, 22, and 24

CI improvements:
- Add Node 24 to the test matrix

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,9 +10,11 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     strategy:
       matrix:
-        node-version: [18, 20, 22]
+        node-version: [18, 20, 22, 24]
     steps:
     - uses: actions/checkout@v6
     - name: Verify dist is not committed
